# student_depression

./: analysis.py  analysis_utils.py  filename  integrate_llm.py  make_inference.py  notebook.ipynb  pyproject.toml  requirements.txt  streamlit_demo.py
data/: clean_df.csv
models/: KNN.pkl  LR.pkl
